[package]
name = "fizzbuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0.59"
futures = "0.3.21"
async-std = "1.11.0"
serde = { version = "1.0.136", features = ["derive"] }